// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LanguageSelector スナップショット ja-JP → en-US の通常表示（idle）の DOM 構造とクラス名が変化しない 1`] = `
<DocumentFragment>
  <div
    class="languageSelector"
  >
    <span
      class="language"
    >
      日本語
    </span>
    <button
      aria-label="言語を入れ替える"
      class="toggleBtn"
      type="button"
    >
      ⇄
    </button>
    <span
      class="language"
    >
      英語
    </span>
  </div>
</DocumentFragment>
`;

exports[`LanguageSelector スナップショット recording 中（disabled）の DOM 構造とクラス名が変化しない 1`] = `
<DocumentFragment>
  <div
    class="languageSelector"
  >
    <span
      class="language"
    >
      日本語
    </span>
    <button
      aria-label="言語を入れ替える"
      class="toggleBtn"
      disabled=""
      type="button"
    >
      ⇄
    </button>
    <span
      class="language"
    >
      英語
    </span>
  </div>
</DocumentFragment>
`;

exports[`MetricsDisplay スナップショット clientPlaybackWaitMs ありのとき再生待ち・合計待ち時間が追加される（クラス名も含む） 1`] = `
<DocumentFragment>
  <div
    aria-label="レイテンシ情報"
    class="metricsDisplay"
  >
    <strong
      class="heading"
    >
      レイテンシ: 
    </strong>
    <span
      class="item"
    >
      音声認識 150ms
    </span>
    <span
      aria-hidden="true"
      class="separator"
    >
       | 
    </span>
    <span
      class="item"
    >
      翻訳 250ms
    </span>
    <span
      aria-hidden="true"
      class="separator"
    >
       | 
    </span>
    <span
      class="item"
    >
      音声合成 350ms
    </span>
    <span
      aria-hidden="true"
      class="separator"
    >
       | 
    </span>
    <span
      class="item"
    >
      合計 750ms
    </span>
    <span
      aria-hidden="true"
      class="separator"
    >
       | 
    </span>
    <span
      class="item"
    >
      再生までのクライアント待ち 100ms
    </span>
    <span
      aria-hidden="true"
      class="separator"
    >
       | 
    </span>
    <span
      class="item"
    >
      合計待ち時間（再生まで） 850ms
    </span>
  </div>
</DocumentFragment>
`;

exports[`MetricsDisplay スナップショット metrics 値あり（全 ms 表示）の DOM 構造とクラス名が変化しない 1`] = `
<DocumentFragment>
  <div
    aria-label="レイテンシ情報"
    class="metricsDisplay"
  >
    <strong
      class="heading"
    >
      レイテンシ: 
    </strong>
    <span
      class="item"
    >
      音声認識 150ms
    </span>
    <span
      aria-hidden="true"
      class="separator"
    >
       | 
    </span>
    <span
      class="item"
    >
      翻訳 250ms
    </span>
    <span
      aria-hidden="true"
      class="separator"
    >
       | 
    </span>
    <span
      class="item"
    >
      音声合成 350ms
    </span>
    <span
      aria-hidden="true"
      class="separator"
    >
       | 
    </span>
    <span
      class="item"
    >
      合計 750ms
    </span>
  </div>
</DocumentFragment>
`;

exports[`MetricsDisplay スナップショット metrics=null のとき何も描画しない（スナップショットが空コンテナ） 1`] = `<DocumentFragment />`;

exports[`Recorder スナップショット error が非 null のときのエラー表示クラスが変化しない 1`] = `
<DocumentFragment>
  <div
    class="recorder"
  >
    <div
      class="status"
    >
      <span>
        状態: idle
      </span>
      <span
        class="errorText"
      >
         | エラー: 接続エラーが発生しました
      </span>
    </div>
    <div
      class="controls"
    >
      <button
        class="btn btnStart"
        type="button"
      >
        開始
      </button>
      <button
        aria-label="手動で発話を区切る"
        class="btn"
        disabled=""
        type="button"
      >
        手動区切り
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Recorder スナップショット status='connecting' の DOM 構造とクラス名が変化しない 1`] = `
<DocumentFragment>
  <div
    class="recorder"
  >
    <div
      class="status"
    >
      <span>
        状態: connecting
      </span>
    </div>
    <div
      class="controls"
    >
      <button
        class="btn btnStart"
        disabled=""
        type="button"
      >
        接続中...
      </button>
      <button
        aria-label="手動で発話を区切る"
        class="btn"
        disabled=""
        type="button"
      >
        手動区切り
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Recorder スナップショット status='idle' の DOM 構造とクラス名が変化しない 1`] = `
<DocumentFragment>
  <div
    class="recorder"
  >
    <div
      class="status"
    >
      <span>
        状態: idle
      </span>
    </div>
    <div
      class="controls"
    >
      <button
        class="btn btnStart"
        type="button"
      >
        開始
      </button>
      <button
        aria-label="手動で発話を区切る"
        class="btn"
        disabled=""
        type="button"
      >
        手動区切り
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Recorder スナップショット status='recording'（録音インジケーター表示）の DOM 構造とクラス名が変化しない 1`] = `
<DocumentFragment>
  <div
    class="recorder"
  >
    <div
      class="status"
    >
      <span>
        状態: recording
      </span>
    </div>
    <div
      aria-label="録音中"
      aria-live="polite"
      class="recordingIndicator"
    >
      <span
        aria-hidden="true"
        class="recordingDot"
      />
      <span>
        録音中
      </span>
    </div>
    <div
      class="controls"
    >
      <button
        class="btn btnStop"
        type="button"
      >
        停止
      </button>
      <button
        aria-label="手動で発話を区切る"
        class="btn"
        type="button"
      >
        手動区切り
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SettingsPanel スナップショット idle（enabled）状態の DOM 構造とクラス名が変化しない 1`] = `
<DocumentFragment>
  <details
    class="settingsPanel"
  >
    <summary
      class="summary"
    >
      設定
    </summary>
    <div
      class="body"
    >
      <label
        class="row"
      >
        <span
          class="label"
        >
          TTS（音声再生）
        </span>
        <input
          checked=""
          class="checkbox"
          type="checkbox"
        />
      </label>
      <label
        class="row"
      >
        <span
          class="label"
        >
          interim 翻訳
        </span>
        <input
          class="checkbox"
          type="checkbox"
        />
      </label>
      <label
        class="row"
      >
        <span
          class="label"
        >
          チャンク間隔(ms)
        </span>
        <input
          class="numberInput"
          max="5000"
          min="50"
          type="number"
          value="250"
        />
      </label>
      <label
        class="row"
      >
        <span
          class="label"
        >
          無音判定(ms)
        </span>
        <input
          class="numberInput"
          max="10000"
          min="100"
          type="number"
          value="1000"
        />
      </label>
      <label
        class="row"
      >
        <span
          class="label"
        >
          最大文字数
        </span>
        <input
          class="numberInput"
          max="500"
          min="10"
          type="number"
          value="80"
        />
      </label>
      <label
        class="row"
      >
        <span
          class="label"
        >
          最大秒数
        </span>
        <input
          class="numberInput"
          max="60"
          min="1"
          type="number"
          value="10"
        />
      </label>
    </div>
  </details>
</DocumentFragment>
`;

exports[`SettingsPanel スナップショット recording（disabled）状態の DOM 構造とクラス名が変化しない 1`] = `
<DocumentFragment>
  <details
    class="settingsPanel"
  >
    <summary
      class="summary"
    >
      設定
    </summary>
    <div
      class="body"
    >
      <label
        class="row"
      >
        <span
          class="label"
        >
          TTS（音声再生）
        </span>
        <input
          checked=""
          class="checkbox"
          disabled=""
          type="checkbox"
        />
      </label>
      <label
        class="row"
      >
        <span
          class="label"
        >
          interim 翻訳
        </span>
        <input
          class="checkbox"
          disabled=""
          type="checkbox"
        />
      </label>
      <label
        class="row"
      >
        <span
          class="label"
        >
          チャンク間隔(ms)
        </span>
        <input
          class="numberInput"
          disabled=""
          max="5000"
          min="50"
          type="number"
          value="250"
        />
      </label>
      <label
        class="row"
      >
        <span
          class="label"
        >
          無音判定(ms)
        </span>
        <input
          class="numberInput"
          disabled=""
          max="10000"
          min="100"
          type="number"
          value="1000"
        />
      </label>
      <label
        class="row"
      >
        <span
          class="label"
        >
          最大文字数
        </span>
        <input
          class="numberInput"
          disabled=""
          max="500"
          min="10"
          type="number"
          value="80"
        />
      </label>
      <label
        class="row"
      >
        <span
          class="label"
        >
          最大秒数
        </span>
        <input
          class="numberInput"
          disabled=""
          max="60"
          min="1"
          type="number"
          value="10"
        />
      </label>
    </div>
  </details>
</DocumentFragment>
`;

exports[`TranscriptView スナップショット interim あり・finals 複数・translations 複数の状態の DOM 構造とクラス名が変化しない 1`] = `
<DocumentFragment>
  <div
    class="transcriptView"
  >
    <section
      aria-label="認識中テキスト"
      class="section"
    >
      <h2
        class="sectionTitle"
      >
        認識中
      </h2>
      <p
        class="interim"
      >
        <em>
          認識中のテキスト
        </em>
      </p>
    </section>
    <section
      aria-label="認識確定テキスト"
      class="section"
    >
      <h2
        class="sectionTitle"
      >
        認識確定
      </h2>
      <ul
        class="list"
      >
        <li
          class="listItem"
        >
          確定文1
        </li>
        <li
          class="listItem"
        >
          確定文2
        </li>
      </ul>
    </section>
    <section
      aria-label="翻訳テキスト"
      class="section"
    >
      <h2
        class="sectionTitle"
      >
        翻訳
      </h2>
      <ul
        class="list"
      >
        <li
          class="listItem"
        >
          <span
            class="source"
          >
            こんにちは
          </span>
          <span
            aria-hidden="true"
            class="arrow"
          >
             → 
          </span>
          <span
            class="translated"
          >
            Hello
          </span>
        </li>
        <li
          class="listItem"
        >
          <span
            class="source"
          >
            ありがとう
          </span>
          <span
            aria-hidden="true"
            class="arrow"
          >
             → 
          </span>
          <span
            class="translated"
          >
            Thank you
          </span>
        </li>
      </ul>
    </section>
  </div>
</DocumentFragment>
`;

exports[`TranscriptView スナップショット 空状態（interim なし・finals 空・translations 空）の DOM 構造とクラス名が変化しない 1`] = `
<DocumentFragment>
  <div
    class="transcriptView"
  >
    <section
      aria-label="認識中テキスト"
      class="section"
    >
      <h2
        class="sectionTitle"
      >
        認識中
      </h2>
      <p
        class="interim"
      >
        （待機中）
      </p>
    </section>
    <section
      aria-label="認識確定テキスト"
      class="section"
    >
      <h2
        class="sectionTitle"
      >
        認識確定
      </h2>
      <p>
        （なし）
      </p>
    </section>
    <section
      aria-label="翻訳テキスト"
      class="section"
    >
      <h2
        class="sectionTitle"
      >
        翻訳
      </h2>
      <p>
        （なし）
      </p>
    </section>
  </div>
</DocumentFragment>
`;

exports[`TranslatorApp スナップショット idle 初期表示の全体 DOM 構造とクラス名が変化しない 1`] = `
<DocumentFragment>
  <div
    class="translatorApp"
  >
    <div
      class="languageSelector"
    >
      <span
        class="language"
      >
        日本語
      </span>
      <button
        aria-label="言語を入れ替える"
        class="toggleBtn"
        type="button"
      >
        ⇄
      </button>
      <span
        class="language"
      >
        英語
      </span>
    </div>
    <div
      class="recorder"
    >
      <div
        class="status"
      >
        <span>
          状態: idle
        </span>
      </div>
      <div
        class="controls"
      >
        <button
          class="btn btnStart"
          type="button"
        >
          開始
        </button>
        <button
          aria-label="手動で発話を区切る"
          class="btn"
          disabled=""
          type="button"
        >
          手動区切り
        </button>
      </div>
    </div>
    <div
      class="transcriptView"
    >
      <section
        aria-label="認識中テキスト"
        class="section"
      >
        <h2
          class="sectionTitle"
        >
          認識中
        </h2>
        <p
          class="interim"
        >
          （待機中）
        </p>
      </section>
      <section
        aria-label="認識確定テキスト"
        class="section"
      >
        <h2
          class="sectionTitle"
        >
          認識確定
        </h2>
        <p>
          （なし）
        </p>
      </section>
      <section
        aria-label="翻訳テキスト"
        class="section"
      >
        <h2
          class="sectionTitle"
        >
          翻訳
        </h2>
        <p>
          （なし）
        </p>
      </section>
    </div>
    <details
      class="settingsPanel"
    >
      <summary
        class="summary"
      >
        設定
      </summary>
      <div
        class="body"
      >
        <label
          class="row"
        >
          <span
            class="label"
          >
            TTS（音声再生）
          </span>
          <input
            checked=""
            class="checkbox"
            type="checkbox"
          />
        </label>
        <label
          class="row"
        >
          <span
            class="label"
          >
            interim 翻訳
          </span>
          <input
            class="checkbox"
            type="checkbox"
          />
        </label>
        <label
          class="row"
        >
          <span
            class="label"
          >
            チャンク間隔(ms)
          </span>
          <input
            class="numberInput"
            max="5000"
            min="50"
            type="number"
            value="250"
          />
        </label>
        <label
          class="row"
        >
          <span
            class="label"
          >
            無音判定(ms)
          </span>
          <input
            class="numberInput"
            max="10000"
            min="100"
            type="number"
            value="1000"
          />
        </label>
        <label
          class="row"
        >
          <span
            class="label"
          >
            最大文字数
          </span>
          <input
            class="numberInput"
            max="500"
            min="10"
            type="number"
            value="80"
          />
        </label>
        <label
          class="row"
        >
          <span
            class="label"
          >
            最大秒数
          </span>
          <input
            class="numberInput"
            max="60"
            min="1"
            type="number"
            value="10"
          />
        </label>
      </div>
    </details>
  </div>
</DocumentFragment>
`;
